# extended-io

./: .gitignore  build.gradle  settings.gradle
jni/: CMakeLists.txt  include
jni/src/: CMakeLists.txt  main.cpp
src/main/java/: Main.java
src/main/java/com/mindrex/ioext/: FileSystem.java  Pointer.java
